link to metamask

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <hr>
 
-      <p id="no-metamask">You need MetaMask to continue.</p>
+      <p id="no-metamask">You need <a href="https://metamask.io/" target="_blank">MetaMask</a> to continue.</p>
       <div id="chain">
         <form id="recorder">
           <input type="text" placeholder="Write your message">
