use minified web3

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" media="all"/>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600' rel='stylesheet' type='text/css'>
 
-    <script src="web3.js"></script>
+    <script src="web3.min.js"></script>
   </head>
   <body>
     <nav>
