github link; style fixes

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     </nav>
 
     <div id="container">
-      <h1>Forever On The Chain</h1>
-      <p>Etch a permanent message into the Ethereum blockchain.</p>
-
+      <h1>Forever On&nbsp;The&nbsp;Chain</h1>
+      <p id="tagline">Etch a permanent message into the Ethereum blockchain.</p>
+      <p id="github">source code on<a href="https://github.com/lifeonmarspt/ethereum-eventer" target="_blank"><img src="github.png" /></a></p>
       <hr>
 
       <div id="chain">
