Add link to post

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <div id="container">
       <h1>Forever On&nbsp;The&nbsp;Chain</h1>
       <p id="tagline">Etch a permanent message into the Ethereum blockchain.</p>
-      <p id="github">source code on<a href="https://github.com/lifeonmarspt/ethereum-eventer" target="_blank"><img src="github.png" /></a></p>
+      <p id="github">read the&nbsp;<a href="https://medium.com/@julio_santos/forever-on-the-chain-c755838dfc79" target="_blank">companion post</a>&nbsp;&middot; source code on<a href="https://github.com/lifeonmarspt/ethereum-eventer" target="_blank"><img src="github.png" /></a></p>
       <hr>
 
       <div id="chain">
