Add shutdown notice

--- a/public/index.html
+++ b/public/index.html
@@ -29,10 +29,29 @@
     </nav>
 
     <div id="container">
-      <h1>Forever On&nbsp;The&nbsp;Chain</h1>
+      <h1>Forever On The Chain</h1>
       <p id="tagline">Etch a permanent message into the Ethereum blockchain.</p>
-      <p id="github">read the&nbsp;<a href="https://medium.com/@julio_santos/forever-on-the-chain-c755838dfc79" target="_blank">companion post</a>&nbsp;&middot; source code on<a href="https://github.com/lifeonmarspt/ethereum-eventer" target="_blank"><img src="github.png" /></a></p>
+      <p id="github">
+        read the <a href="https://medium.com/@julio_santos/forever-on-the-chain-c755838dfc79" target="_blank">companion post</a>
+        &middot; source code on <a href="https://github.com/lifeonmarspt/ethereum-eventer" target="_blank"><img src="github.png" alt="github" /></a>.
+      </p>
+
       <hr>
+
+      <div id="disabled">
+        <p>
+          We have stopped maintaining our ethereum node, rendering this demo unusable.
+        </p>
+
+        <p>
+          If you have your own node, you can load it here:
+
+          <form id="provider">
+            <input type="text" placeholder="Your web3 provider">
+            <input type="submit" value="Load">
+          </form>
+        </p>
+      </div>
 
       <div id="chain">
         <p id="no-metamask">(You need <a href="https://metamask.io/" target="_blank">MetaMask</a> to write to the blockchain.)</p>
